# hermod

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-01-15-ENG-3345-test-coverage.md
src/hermod/: __init__.py  __version__.py  cli.py  collector.py  dependencies.py  git_detector.py  logging_config.py
tests/: __init__.py
tests/hermod/: __init__.py  test_cli.py  test_collector.py  test_dependencies.py  test_git_detector.py  test_logging_config.py
