[project]
name = "hermod"
version = "0.1.0"
description = "CLI tool for AI usage tracking and submission"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Degree Analytics", email = "engineering@degreeanalytics.com"}
]
license = {text = "MIT"}
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.0",
    "gitpython>=3.1.0",
]

[project.scripts]
hermod = "hermod.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermod"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "S"]
ignore = ["S603", "S607"]  # Allow subprocess with validation

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=hermod --cov-report=term-missing"
